--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/serve": "^2",
     "isbot": "^3.6.13",
     "match-sorter": "^6.3.1",
+    "openai": "^4.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sort-by": "^1.2.0",
